[package]
name = "rblhost"
version = "0.1.0"
license = "BSD-3-Clause"
edition = "2024"
description = "The rblhost application is a fast command-line utility providing McuBoot library used on the host computer to initiate communication and issue commands to the MCU bootloader."
repository = "https://github.com/nxp-mcuxpresso/rblhost"
homepage = "https://github.com/nxp-mcuxpresso/rblhost"
documentation = "https://github.com/nxp-mcuxpresso/rblhost#readme"
keywords = ["nxp", "microcontroller", "embedded", "bootloader"]
categories = ["command-line-utilities"]
readme = "README.md"
rust-version = "1.88"
default-run = "rblhost"

[lib]
name = "mboot"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "rblhost"
path = "src/main.rs"

[[bin]]
name = "stub_gen"
path = "src/bin/stub_gen.rs"

[features]
default = []
python = ["pyo3", "pyo3/extension-module", "pyo3-stub-gen", "pyo3-stub-gen-derive", "enum_dispatch"]
c_api = ["cbindgen", "enum_dispatch"]

[lints.rust]
trivial_numeric_casts = "warn"
ambiguous_negative_literals = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
allow_attributes_without_reason = "warn"
branches_sharing_code = "warn"
cargo_common_metadata = "warn"
cast_sign_loss = "warn"
cfg_not_test = "warn"
decimal_literal_representation = "warn"
default_union_representation = "warn"
derive_partial_eq_without_eq = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
equatable_if_let = "warn"
error_impl_error = "warn"
fallible_impl_from = "warn"
imprecise_flops = "warn"
large_stack_frames = "warn"
map_with_unused_argument_over_ranges = "warn"
mem_forget = "warn"
needless_collect = "warn"
read_zero_byte_vec = "warn"
redundant_clone = "warn"
redundant_pub_crate = "warn"
rest_pat_in_fully_bound_structs = "warn"
return_and_then = "warn"
semicolon_outside_block = "warn"
separated_literal_suffix = "warn"
unnecessary_struct_initialization = "warn"
unneeded_field_pattern = "warn"
unused_peekable = "warn"
useless_let_if_seq = "warn"

# Some of these are allowed by group warns and are not relevant for blhost
unreadable_literal = "allow"
single_match = "allow"
cast_possible_truncation = "allow"
items_after_statements = "allow"


[dependencies]
crc = "3.3.0"
serialport = "4.7.2"
thiserror = "2.0.12"
strum = { version = "0.27.2", features = ["derive"] }
clap = { version = "4.5.42", features = ["derive"] }
anyhow = "1.0.98"
num-traits = "0.2.19"
pretty-hex = "0.4.1"
log = "0.4.27"
env_logger = "0.11.8"
color-print = "0.3.7"
pyo3 = { version = "0.25.1", optional = true, features = ["extension-module"] }
libc = "0.2"  # For ioctl calls
cbindgen = { version = "0.29.0", optional = true }
indicatif = "0.18.0"
hidapi = "2.6.3"
pyo3-stub-gen = { version = "0.12.1", optional =  true}
pyo3-stub-gen-derive = { version = "0.12.1", optional = true}
enum_dispatch = { version = "0.3.13", optional = true }
number_prefix = "0.4.0"
derive_more = { version = "2.0.1", features = ["debug", "display", "try_from"] }

[build-dependencies]
cbindgen = { version = "0.29.0", optional = true }
